hphp/test/zend/bad/ext/standard/tests/file/windows_links/bug48746_1.php.skipif
<?php
if(substr(PHP_OS, 0, 3) != 'WIN' ) {
    die('skip windows only test');
}
include_once __DIR__ . '/common.inc';
$cmd = "mklink /?";
$ret = @exec($cmd, $output, $return_val);
if (count($output) == 0) {
    die("mklink.exe not found in PATH");
}
?>